# Synaptic-Labs-AI_claudesidian

./: README.md  pyproject.toml  requirements.txt
src/: __init__.py  config.py  server.py  tools.py
src/claudesidian/: __init__.py  __main__.py  config.py  server.py  tools.py
src/claudesidian/core/: __init__.py  frontmatter.py  notes.py  types.py  vault.py
src/claudesidian/memory/: graph.py  manager.py  moc.py  relationships.py
src/claudesidian/utils/: path_resolver.py
src/claudesidian/web/: __init__.py  converter.py  parser.py  scraper.py
src/claudesidian_mcp/: __init__.py  memory.py  scraper.py  search.py  server.py  tools.py  vault.py
src/core/: __init__.py  frontmatter.py  notes.py  vault.py
src/memory/: decay.py  graph.py  manager.py  relationships.py
src/web/: converter.py  parser.py  scraper.py
