[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claudesidian"
version = "0.1.0"
description = "MCP server for Obsidian vault interaction"
requires-python = ">=3.9"
dependencies = [
    "mcp",
    "fuzzywuzzy",
    "python-Levenshtein",
]

[project.scripts]
claudesidian = "claudesidian_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/claudesidian_mcp"]
