[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claudesidian"
version = "0.1.0"
description = "MCP server for Obsidian vault interaction"
requires-python = ">=3.9"
dependencies = [
    "mcp",                    # Core MCP functionality
    "fuzzywuzzy",            # Fuzzy string matching
    "python-Levenshtein",    # Faster Levenshtein distance calculations
    "playwright",            # Web scraping
    "pydantic",              # Data validation
    "python-dotenv",         # Environment variable management
    "anyio",                 # Async I/O support
]

[project.scripts]
claudesidian = "claudesidian_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/claudesidian_mcp"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "black",
    "isort",
    "mypy"
]
